--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
     <div>
         <ul>
             <li><a href="index.html" data-new-state="Intro" class="js-mob-nav-btn js-state-change" data-new-state="project">Intro</a></li>
-            <li><a href="who/index.html" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Who</a></li>
-            <li><a href="what/index.html" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">What</a></li>
-            <li><a href="work/index.html" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
+            <li><a href="who/" data-new-state="who" class="js-mob-nav-btn js-state-change" data-new-state="who">Who</a></li>
+            <li><a href="what/" data-new-state="what" class="js-mob-nav-btn js-state-change" data-new-state="what">What</a></li>
+            <li><a href="work/" data-new-state="work" class="js-mob-nav-btn js-state-change" data-new-state="work">Work</a></li>
         </ul>
     </div>
     <div>
